# BET

./: .gitignore  Cargo.toml  README.md
docs/: BDD-GENERATION.md  COMPLETENESS-CHECKLIST.md  FORMAT.md  GUIDE.md  TESTING.md
examples/insurance-quote/: 01-capabilities.md  02-data-model.md  04-validation-rules.md  05-business-rules.md  06-flow-state.md  07-conditional-logic.md  08-constraints.md  09-external-interactions.md  11-messages.md  13-edge-cases.md  16-interaction-behaviour.md  17-accessibility.md  18-data-lifecycle.md
spec/: 01-capabilities.md  02-data-model.md  03-permissions.md  04-validation-rules.md  05-business-rules.md  06-flow-state.md  07-conditional-logic.md  08-constraints.md  09-external-interactions.md  10-events-side-effects.md  11-messages.md  12-error-taxonomy.md  13-edge-cases.md  14-dependencies.md  15-non-functional.md  16-interaction-behaviour.md  17-accessibility.md  18-data-lifecycle.md  19-ui-specification.md  20-technical-architecture.md  21-seo.md  22-localization.md  23-animation.md  24-monitoring.md  25-onboarding.md  26-multi-channel.md  27-testing-strategy.md
src/: main.rs
src/docs/: mod.rs
src/generator/: mod.rs  readme.rs  section_template.rs
src/models/: detect.rs  mod.rs  section.rs
src/sections/: mod.rs  prefix.rs
src/ui/: display.rs  mod.rs  prompts.rs
