[package]
name = "bet"
version = "0.1.0"
edition = "2024"
description = "Generate BET (Behaviour Extraction Template) spec structures"
repository = "https://github.com/doomedramen/BET"

[dependencies]
inquire = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
